<resources>
    <string name="app_name">LearningZone</string>
    <string name="Get_Started">Get Started</string>
    <string name="Skip">Skip</string>
    <string name="string_one">INIT </string>
    <string name="string_two">sum is simply dummy text of the printing and typesetting industry. Lorem Ipsum </string>
    <string name="string_three">t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: FRAGMENT AREAS text -->
    <string name="more">Más</string>
    <string name="Name_area">Desarrollo Web</string>
    <string name="Description_area">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) </string>
<!--Name areas out-->
    <string name="Names_areas_dev">Nombre de Lenguaje: </string>
</resources>