<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    android:layout_margin="8dp"
    app:cardUseCompatPadding="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
android:id="@+id/titleView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:contentDescription="@string/Get_Started"
            android:id="@+id/image_area"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ut01" >
        </ImageView>

        <TextView
            android:id="@+id/title_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@id/image_area"
            android:layout_toRightOf="@id/image_area"
            android:text="@string/Name_area"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>



    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expandable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/description_area"
            android:layout_width="315dp"
            android:layout_height="103dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="0dp"
            android:text="@string/Description_area"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_send" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>